--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Studionow</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.0/dist/aos.css">
+    <link rel="stylesheet" href="libs/aos.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -335,8 +335,8 @@
     </div>
     <!-- Others JS Files -->
     <script src="libs/jquery/jquery.js"></script>
-    <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.0/dist/aos.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="libs/aos.js"></script>
     <!-- <script src="/libs/jquery.backgroundvideo.min.js"></script> -->
     <!-- AngularJs vDependencies -->
     <!-- Our JS App Fies -->
