--- a/builds/development/case-studies.html
+++ b/builds/development/case-studies.html
@@ -10,7 +10,7 @@
     <link href="//vjs.zencdn.net/5.8/video-js.min.css" rel="stylesheet">
 </head>
 
-<body class="solutions">
+<body class="case-studies">
     <div class="container-fluid">
 
         <header id="top">
@@ -33,145 +33,38 @@
                         </div>
                     </div>
                     <div class="row text-center" id="video-elevated">
-                        <h1>Working Together, Our Solutions Are Next Level</h1>
-                        <h2>The Creative Network, Technology and People to harness the power of creating video content</h2>
+                        <h1>Our way works.</h1>
+                        <h2>When it comes to video, we know our stuff. Check out these success stories from some of proud partners.</h2>
                     </div>
-                    <div class="text-center" id="integrated-solutions">
-                        <div>
-                            <a href="#sn-network">
-                                <div>
-                                    <img src="img/Network-Icon-Solutions@3x.svg" alt="Studionow Logo" />
-                                    <div class="text-center sn">
-                                        SN
-                                    </div>
-                                    <div class="text-center lead">
-                                        Network
-                                    </div>
-                                    <p>10,000+, highly curated and vetted video professionals (directors, production companies, videographers, editors, animators, VO specialist and film talent)</p>
-                                </div>
-                                <div class="arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
-
-                            </a>
-                            <a href="#sn-cloud">
-                                <img src="img/Cloud-Icon-Solutions@3x.svg" alt="Studionow Logo" />
-                                <div class="text-center sn">
-                                    SN
-                                </div>
-                                <div class="text-center lead">
-                                    Cloud
-                                </div>
-                                <p>
-                                    SaaS offering for production, resource, asset and contract management as well as scheduling, collaboration and dashboard reporting
-                                </p>
-                                <div class="arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
-                            </a>
-                            <a href="#sn-studios">
-                                <img src="img/Studios-Icon-Solutions@3x.svg" alt="Studionow Logo" />
-                                <div class="text-center sn">
-                                    SN
-                                </div>
-                                <div class="text-center lead">
-                                    Studios
-                                </div>
-                                <p>
-                                    Innovative, on-demand and scalable digital studio setup and onsite management that leverages SN Marketplace and SN Cloud
-                                </p>
-                                <div class="arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
-                            </a>
-                            <a href="#sn-pro">
-                                <img src="img/Pro-Icon-Solutions@3x.svg" alt="Studionow Logo" />
-                                <div class="text-center sn">
-                                    SN
-                                </div>
-                                <div class="text-center lead">
-                                    Pro
-                                </div>
-                                <p>
-                                    Production management, community building, asset management, work sourcing and contract management products
-                                </p>
-                                <div class="arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
-                            </a>
-                            <a href="#sn-producers">
-                                <img src="img/Producers-Icon-Solutions@3x.svg" alt="Studionow Logo" />
-                                <div class="text-center sn">
-                                    SN
-                                </div>
-                                <div class="text-center lead">
-                                    Producers
-                                </div>
-                                <p>
-                                    An in-house team of elite, industry-leading production experts, account teams with top tier experience, and technology teams
-                                </p>
-                                <div class="arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
-                            </a>
+                    <div class="row text-center">
+                        <div class="btn btn-transparent" id="video-gallery-button">
+                            <a href="#">Jump to our Featured Videos Gallery</a>
                         </div>
                     </div>
+
                 </div>
             </div>
         </header>
 
-        <div id="sn-network" class="white-background image-side side-left">
-            <div class="block-img" data-aos="fade-right"><img src="img/Solutions-Panel-Image-Network@2x.png" alt=""></div>
-            <div class="block-text">
-                <div class="sn-img"><img src="img/Network-Icon-Color-Home@3x.svg" alt=""></div>
-                <div class="sn text-center">SN</div>
-                <h1 class="text-center">Network</h1>
-                <p>
-                    Our creative network is unlike any other. Comprised of thousands of vetted video professionals with a global network reach and wide geographic coverage, you can shoot high-quality video or photos anywhere around the globe
-                </p>
+        <div class="video-brands">
+          <div class="brand-box">
+            <img src="img/akamai@2x.png" alt="">
+            <div>
+              <h4>A Trusted Video Content Partnership:</h4>
+              <p>Akamai knew they needed a way to simplify the process while maintaining brand and quality standards.</p>
             </div>
-        </div>
-
-
-        <div id="sn-cloud" class="grey-background image-side side-right">
-            <div class="block-text">
-                <div class="sn-img"><img src="img/Cloud-Icon-Color-Home@3x.svg" alt=""></div>
-                <div class="sn text-center">SN</div>
-                <h1 class="text-center">Cloud</h1>
-                <p>
-                    The Studio SaaS offering will get your process under control and keep things organized and running smoothly. Consolidate your efforts by having scheduling, collaboration, media review, contract management, payment and dashboard reporting all in one place.
+            <div class="btn btn-transparent-blue">Read Full Case Study</div>
+          </div>
+          <div class="video-box">
+            <video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
+               data-setup="{}">
+                <source src="video/reel.mp4" type='video/mp4'>
+                <p class="vjs-no-js">
+                  To view this video please enable JavaScript, and consider upgrading to a web browser that
+                  <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                 </p>
-            </div>
-            <div class="block-img" data-aos="fade-left"><img src="img/Solutions-Panel-Image-Cloud@2x.png" alt=""></div>
-        </div>
-
-        <div id="sn-studios" class="white-background image-side side-left">
-            <div class="block-img" data-aos="fade-right"><img src="img/Solutions-Panel-Image-Studios@3x.jpg" alt=""></div>
-            <div class="block-text">
-                <div class="sn-img"><img src="img/Studios-Icon-Color-Home@3x.svg" alt=""></div>
-                <div class="sn text-center">SN</div>
-                <h1 class="text-center">Studios</h1>
-                <p>
-                    We'll embed a higly-managed, full-lime team of experts into the heart of your enterprise. With onsite studio setup and management powered by StudioNow, you can quarantee high-quality videos that meet and continuously exceed brand standarts for your company's
-                    video program.
-                </p>
-            </div>
-        </div>
-
-
-        <div id="sn-pro" class="grey-background image-side side-right">
-            <div class="block-text">
-                <div class="sn-img"><img src="img/Pro-Icon-Color-Home@3x.svg" alt=""></div>
-                <div class="sn text-center">SN</div>
-                <h1 class="text-center">Pro</h1>
-                <p>
-                    This scalable solution is perfect for big brands, actively growing and in need of a streamlined video solution. SN Pro is our proprietary production and asset management, community building, and contract execution system that keeps your video process
-                    running smoothly with high visibility, allowing for across the board brand consistency.
-                </p>
-            </div>
-            <div class="block-img" data-aos="fade-left"><img src="img/Solutions-Panel-Image-Cloud@2x.png" alt=""></div>
-        </div>
-
-        <div id="sn-producers" class="white-background image-side side-left">
-            <div class="block-img" data-aos="fade-right"><img src="img/Solutions-Panel-Image-Studios@3x.jpg" alt=""></div>
-            <div class="block-text">
-                <div class="sn-img"><img src="img/Producers-Icon-Color-Home@3x.svg" alt=""></div>
-                <div class="sn text-center">SN</div>
-                <h1 class="text-center">Producers</h1>
-                <p>
-                    Our creative network is unlike any other. Comprised of thousands of vetted video professionals with a global network reach and wide geographic coverage, you can shoot high-quality video or photos anywhere around the globe
-                </p>
-            </div>
+              </video>
+          </div>
         </div>
 
         <div id="made-easy" class="white-background">
@@ -214,8 +107,8 @@
                             </form>
                         </div>
                         <div id="panel2" class="tab-pane fade">
-                            <h3>Панель 2</h3>
-                            <p>Содержимое 2 панели...</p>
+                            <h3>РџР°РЅРµР»СЊ 2</h3>
+                            <p>РЎРѕРґРµСЂР¶РёРјРѕРµ 2 РїР°РЅРµР»Рё...</p>
                         </div>
                     </div>
                 </div>
